CustomObjects/objects/SBQQ__FavoriteProduct__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__ConfigurationAttributes__c</fullName>
        <label>Configuration Attributes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Favorite__c</fullName>
        <label>Favorite</label>
        <referenceTo>SBQQ__Favorite__c</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>SBQQ__FavoriteProduct__c</referenceTo>
        <relationshipLabel>Favorite Product</relationshipLabel>
        <relationshipName>FavoriteProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite Product</label>
    <nameField>
        <label>Favorite Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>